apps/staging/golinks/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: golinks-http
  namespace: golinks-stage
spec:
  hostnames:
    - go.stage.burntbytes.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: golinks-https
  namespace: golinks-stage
spec:
  hostnames:
    - go.stage.burntbytes.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: golinks
          port: 8080
